# Algovibe

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROUND3_PLAYBOOK.md
.github/workflows/: docker-build.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  algorand_agent.py  architect.py  orchestrator.py  react_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: generate.py  llm.py  protocols.py  publish.py
backend/app/core/: config.py  llm.py  llm_config.py  memory.py
backend/app/db/: models.py  session.py
backend/app/protocols/: __init__.py  registry.py
backend/app/rag/: __init__.py  embeddings.py  prompts.py  retriever.py
backend/app/services/: __init__.py  build_store.py  compiler_client.py  context7.py  dapp_path_repair.py  dapp_path_verifier.py  dapp_simulator.py  deployment_generator.py  vercel_publish.py
backend/app/templates/: __init__.py  frontend.py
backend/scripts/: index_algorand_docs.py
docs/: API.md  SETUP.md  SMART_CONTRACTS.md
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAlgorand.ts
frontend/lib/: abi-tx.ts  algorand-state.ts  api.ts  bridge-protocol.ts  build-log-format.ts  export-algorand-state-string.ts  export-algorand-state.ts  export-templates.ts  fix-use-contract.ts  llm-settings.ts  preview-bridge-hooks.ts  sandpack-files.ts  sandpack-init.ts  serialize.ts  store.ts
frontend/scripts/: sync-export-state.mjs
(+38 files in other folders)
