[project]
name = "algovibe-backend"
version = "1.0.0"
description = "AlgoVibe backend for generating and deploying Algorand DApps"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart==0.0.6",
    "sse-starlette==2.0.0",
    "anthropic>=0.43.0",
    "langchain==0.1.5",
    "langgraph==0.0.20",
    "langchain-community==0.0.17",
    "httpx==0.26.0",
    "aiohttp==3.9.3",
    "py-algorand-sdk>=2.6.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "PyNaCl>=1.5.0",
    "python-dotenv==1.0.1",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
